--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             Gênero: Feminino <br>
             RA: 1461392221013 <br>
             Data de Nascimento: 10/06/1998 </p>
+            <a href="contatos.html"> Contatos </a> <br>
         </div>
 </body>
 </html>
